--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -3,5 +3,5 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES src/main.cpp src/product.cpp src/product.h src/item.cpp src/item.h src/invoice.cpp src/invoice.h src/textprinter.cpp src/textprinter.h)
+set(SOURCE_FILES src/main.cpp src/product.cpp src/item.cpp src/invoice.cpp src/textprinter.cpp)
 add_executable(lab1 ${SOURCE_FILES})
